--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@
   --primary-bg-color: #121212:
   --secondary-bg-color: #333;
   --primary-color: #4a90e2;
+  /* primary text: #E0E0E0 */
 }
 
 html {
