--- a/src/style.css
+++ b/src/style.css
@@ -61,3 +61,14 @@ body {
 .hidden {
   display: none;
 }
+
+/* HOME PAGE */
+.homepage-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
+.user-info {
+  justify-self: flex-start;
+}
