--- a/src/style.css
+++ b/src/style.css
@@ -67,8 +67,69 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
+  justify-content: space-between;
+  padding: 4rem 8rem;
 }
 
 .user-info {
-  justify-self: flex-start;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.user-profile-picture {
+  width: 20rem;
+  height: 20rem;
+  background-color: #333;
+  margin-bottom: 3rem;
+}
+
+.user-username {
+  color: #fff;
+  font-size: 4.8rem;
+  text-align: center;
+}
+
+.user-actions {
+  margin-top: 1rem;
+}
+
+.user-btn {
+  width: 13rem;
+  font-family: inherit;
+  padding: 1rem 2rem;
+  background-color: #4a90e2;
+  border: none;
+  cursor: pointer;
+  color: #fff;
+}
+
+.wall-info {
+  margin: 0 auto;
+}
+
+.create-post-container {
+  display: flex;
+  justify-content: center;
+
+}
+
+.create-post-input {
+  width: 60rem;
+  height: 5rem;
+  resize: none;
+  font-family: inherit;
+  font-size: 2rem;
+  padding: 1rem 2rem;
+  overflow: hidden;
+}
+
+.create-post-btn {
+  height: 5rem;
+  font-family: inherit;
+  padding: 1rem 2rem;
+  background-color: #4a90e2;
+  border: none;
+  cursor: pointer;
+  color: #fff;
 }
