--- a/src/style.css
+++ b/src/style.css
@@ -118,7 +118,7 @@ body {
 
 }
 
-.create-post-input {
+.post-input {
   width: 60rem;
   height: 5rem;
   resize: none;
@@ -128,7 +128,7 @@ body {
   overflow: hidden;
 }
 
-.create-post-btn {
+.post-btn {
   height: 5rem;
   font-family: inherit;
   padding: 1rem 2rem;
@@ -175,7 +175,7 @@ body {
   padding-top: 0.5rem;
 }
 
-.post-owner {
+.post-info {
   font-size: 1.6rem;
   padding-left: 1rem;
 }
@@ -187,7 +187,7 @@ body {
   justify-content: center;
 }
 
-.post-btn {
+.post-action-btn {
   color: #fff;
   background-color: #4a90e2;
   padding: 0.5rem 1rem;
