--- a/src/style.css
+++ b/src/style.css
@@ -335,3 +335,10 @@ body {
   border: none;
   cursor: pointer;
 }
+
+.modal-error {
+  font-size: 2rem;
+  color: red;
+  text-align: center;
+  font-weight: 800;
+}
