--- a/src/style.css
+++ b/src/style.css
@@ -83,59 +83,129 @@ body {
   width: 20rem;
   height: 20rem;
   background-color: #333;
-  margin-bottom: 3rem;
+  transition: 0.3s all ease;
+}
+
+.user-profile-picture:hover {
+  transform: scale(1.05);
 }
 
 .user-username {
   color: #fff;
-  font-size: 4.8rem;
+  font-size: 3.6rem;
   text-align: center;
+  margin-top: 0.7rem;
 }
 
 .user-actions {
-  margin-top: 1rem;
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 1rem;
+  border-top: 2px solid #333;
+  padding: 2rem 1rem;
 }
 
 .user-btn {
-  width: 13rem;
+  width: 25rem;
   font-family: inherit;
   padding: 1rem 2rem;
-  background-color: #4a90e2;
+  background-color: transparent;
   border: none;
   cursor: pointer;
   color: #fff;
+  font-size: 1.8rem;
+  align-self: stretch;
+  display: flex;
+  gap: 2rem;
+  transition: 0.3s all ease;
+  border-radius: 1rem;
+}
+
+.user-btn:hover {
+  background-color: #333;
+}
+
+.social-user {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 2rem;
+}
+
+.user-profile-picture {
+  width: 15rem;
+  height: 15rem;
+  border-radius: 50%;
 }
 
 /* WALL INFO */
 
 .wall-info {
   margin: 0 auto;
+  border-radius: 1rem;
 }
 
 .create-post-container {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  background-color: #181818;
+  border-radius: 1rem;
+  gap: 1rem;
+  padding: 3rem 2rem;
+}
 
+.create-post-input {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+.user-post-picture {
+  width: 5rem;
+  height: 5rem;
 }
 
 .post-input {
-  width: 60rem;
-  height: 5rem;
+  width: 62rem;
+  height: 4.5rem;
+  border-radius: 1rem;
   resize: none;
   font-family: inherit;
   font-size: 2rem;
   padding: 1rem 2rem;
   overflow: hidden;
+  background-color: #181818;
+}
+
+.post-input::placeholder {
+  color: #777;
+}
+
+.create-post-options {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.post-options {
+  display: flex;
+  gap: 2rem;
+  font-size: 1.8rem;
+  color: #777;
 }
 
 .post-btn {
-  height: 5rem;
   font-family: inherit;
   padding: 1rem 2rem;
-  background-color: #4a90e2;
+  background-color: #777;
   border: none;
   cursor: pointer;
   color: #fff;
+  border-radius: 1rem;
 }
 
 /* POSTS */
@@ -150,28 +220,44 @@ body {
 
 .post {
   color: #fff;
-  width: 720px;
+  padding: 1.5rem;
+  width: 100%;
   white-space: normal;
   word-wrap: break-word;
-  font-size: 2.4rem;
-  border: 1px solid #fff;
-  /* padding: 2rem 4rem; */
-  background-color: #333;
-  border-radius: 0.5rem;
+  font-size: 2rem;
+  background-color: #181818;
+  border-radius: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   position: relative;
 }
 
+.post-user-info {
+  display: flex;
+  gap: 1rem;
+  font-size: 1.8rem;
+}
+
+.post-user-name-date {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.post-user-date {
+  font-size: 1.3rem;
+  color: #777;
+}
+
 .post-content {
-  padding: 2rem 4rem;
+  margin-top: 1rem;
 }
 
 .post-more {
   display: flex;
   justify-content: space-between;
-  border-top: 1px solid #fff;
+  border-top: 1px solid #777;
   padding-top: 0.5rem;
 }
 
@@ -195,10 +281,9 @@ body {
 }
 
 .post-menu {
-  width: 1rem;
-  height: 1rem;
-  background-color: #fff;
   position: absolute;
+  width: 2rem;
+  height: 2rem;
   top: 1rem;
   right: 1rem;
   cursor: pointer;
@@ -209,7 +294,6 @@ body {
   flex-direction: column;
   gap: 1rem;
   width: 15rem;
-  margin-top: 2rem;
   background-color: #333;
   list-style: none;
   padding: 0.8rem;
