--- a/src/responsive.css
+++ b/src/responsive.css
@@ -88,17 +88,17 @@
 
 @media (max-width: 34em) {
   .homepage-container {
-    padding: 1rem;
+    padding: 2rem;
   }
 
   .wall-info {
-    width: 40rem;
+    width: 100%;
   }
 
   .create-post-container {
-    padding: 1rem 0.5rem;
+    padding: 2rem 0.5rem;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-around;
     flex-wrap: nowrap;
   }
 
@@ -106,5 +106,9 @@
     width: 28rem;
     padding: 0;
     justify-content: flex-start;
+  }
+
+  .create-post-options {
+    width: 100%;
   }
 }
