--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,52 @@ body {
   align-items: center;
   height: 100dvh;
   background-color: #121212;
+  padding-top: 5rem;
+}
+
+/* MOBILE MENU */
+.mobile-menu {
+  display: none;
+  width: 100%;
+  height: 5rem;
+  background-color: #181818;
+  position: absolute;
+  top: 0;
+  justify-content: center;
+  align-items: center;
+}
+
+.mobile-menu-icon {
+  font-size: 2.6rem;
+  color: #fff;
+}
+
+.social-about-mobile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  gap: 1rem;
+  left: 2rem;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.social-about-mobile .social-logo {
+  width: 3rem;
+  height: 3rem;
+}
+
+.social-about-mobile .secondary-heading {
+  font-size: 2.5rem;
+}
+
+.mobile-item {
+  padding: 1rem 2rem;
+}
+
+.mobile-active {
+  background-color: #333;
 }
 
 /* LOGIN/REGISTER */
