--- a/src/style.css
+++ b/src/style.css
@@ -131,6 +131,7 @@ body {
   height: 20rem;
   background-color: #333;
   transition: 0.3s all ease;
+  cursor: pointer;
 }
 
 .user-profile-picture:hover {
