--- a/src/style.css
+++ b/src/style.css
@@ -218,6 +218,8 @@ body {
   width: 15rem;
   height: 15rem;
   border-radius: 50%;
+  object-fit: cover;
+  overflow: hidden;
 }
 
 /* WALL INFO */
